--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,29 @@
-# Report of the activity monitoring
+# Activity monitoring data report
+
+
+**Author:** Taurus Olson  
+**Date:** 16th October 2014
 
 
 ## Loading and preprocessing the data
 
-```{r loading_data}
-# Load the activity dataset
-activity <- read.csv("data/activity.csv")
+We load the `Activity monitoring` dataset and format the `date` column properly.
 
-# Format the date column properly
+```{r loading_data}
+activity <- read.csv("data/activity.csv")
 activity$date <- as.Date(activity$date, format="%Y-%m-%d")
 ```
 
 
 ## Mean total number of steps taken per day
 
-The total number of steps taken per day is obtained by grouping the steps by day
-and applying a sum excluding the missing values:
+The total number of steps taken per day is obtained by grouping the steps by
+day and applying a sum excluding the missing values. The corresponding histogram 
+is shown below:
 
 ```{r sum_total_steps}
 steps_per_day <- aggregate(steps ~ date, data=activity, sum, na.rm=TRUE)
-hist(steps_per_day$steps, xlab="Number of steps", breaks=10, 
+h <- hist(steps_per_day$steps, xlab="Number of steps", breaks=10, 
      col="seagreen", main="Total number of steps taken each day")
 ```
 
@@ -36,25 +40,33 @@ median_steps_per_day <- median(steps_per_day$steps)
 
 ## Average daily activity pattern
 
+The average daily activiy pattern is obtained by grouping the steps by the
+5-minute intervals and applying a mean excluding the missing values. The corresponding
+time series is shown below:
+
 ```{r average_daily_activity}
-avg_daily_steps <- aggregate(steps ~ interval, data=activity, mean, na.rm = T)
+avg_daily_steps <- aggregate(steps ~ interval, data=activity, mean, na.rm = TRUE)
 plot(avg_daily_steps, type="l", main="Average daily steps", 
      ylab="Number of steps", xlab="5-minute intervals")
+```
 
+```{r max_steps}
 max_steps <- subset(avg_daily_steps, steps == max(avg_daily_steps$steps))
 ```
 
-The maximum number of steps (`r max_steps$steps`), on average accross all the days in the dataset occurs in the interval `r max_steps$interval`.
+The maximum number of steps (`r max_steps$steps`), on average accross all the
+days in the dataset occurs in the interval `r max_steps$interval`.
 
 
 ## Imputing missing values
 
+Here is code allowing to count the number of missing values in the dataset (coded as `NA`):
+
 ```{r missing_values}
-missing_values <- subset(activity, is.na(steps))
-nb_missing_values <- nrow(missing_values)
+nb_missing_values <- nrow(subset(activity, is.na(steps)))
 ```
 
-There are `r nb_missing_values` missing values in the dataset.
+There are `r nb_missing_values` missing values.
 
 The strategy for imputing missing values:
 
@@ -79,14 +91,13 @@ names(activity_new)[2] <- "steps"
 activity_new <- activity_new[, c("interval", "steps", "date")]
 ```
 
-The histogram of the total number of steps taken each day is now:
+The histogram of the total number of steps taken each day after the imputation is:
 
 ```{r histogram_after_imputation}
 steps_per_day_new <- aggregate(steps ~ date, data=activity_new, sum)
-hist(steps_per_day_new$steps, xlab="Number of steps", breaks=10, 
+h_new <- hist(steps_per_day_new$steps, xlab="Number of steps", breaks=10, 
      col="seagreen", main="Total number of steps taken each day")
 ```
-
 
 The mean and the median of the total number of steps per day after imputing the 
 missing values:
@@ -99,27 +110,52 @@ median_steps_per_day_new <- median(steps_per_day_new$steps)
 * Mean: `r sprintf("%.2f", mean_steps_per_day_new)`
 * Median: `r sprintf("%.2f", median_steps_per_day_new)`
 
-These results show that, after the imputation, only the median value differs from the original estimation. It is now equal to mean value.
-Imputing missing data with the mean values of the average daily data allowed to prevent the loss of information and preserve the mean total
-number of steps taken per day. 
+These results show that, after the imputation, only the median value differs
+from the original estimation. It is now equal to mean value.  
+
+The following table shows a comparison of the counts of the number of
+steps per day before and after the imputation:
+
+```{r comparison_steps_per_day, results="asis"}
+nb_steps <- data.frame(steps=h$mids, count_before=h$counts, count_after=h_new$counts)
+library(xtable)
+print(xtable(nb_steps), type="html")
+```
+
+The result shows that the count after the imputation increased of 50% for the value
+11000 steps (which is roughly the mean value of the total number of steps per day.)
+
+Imputing missing data with the mean values of the average daily data allowed to
+prevent the loss of information and preserve the mean total number of steps
+taken per day. 
 
 
 ## Differences in activity patterns between weekdays and weekends
 
 The week days of the date column in the dataset are deduced with the `weekdays`
-function and created as a factor that is then added as a new column:
+function and created as a factor that is then added as a new column.
 
 ```{r week_days}
 fdays <- factor(weekdays(activity_new$date))
-levels(fdays)[levels(fdays) %in% c("Dimanche", "Samedi")] = "weekend" 
+
+# Weekends are designated by 'weekend'
+levels(fdays)[levels(fdays) %in% c("Sunday", "Saturday")] = "weekend" 
+
+# Weekdays are designated by 'weekday'
 levels(fdays)[!(levels(fdays) %in% "weekend")] = "weekday" 
 
-activity_new$day <- fdays
+activity_new$days <- fdays
 ```
 
-```{r panel_plot}
+The average number of steps averaged across all weekday days or weekend days is
+obtained by grouping the steps by 5-minute interval and days, then applying the
+mean. The corresponding time sries is shown below:
+
+```{r avg_daily_steps_by_days}
+avg_daily_steps_by_days <- aggregate(steps ~ interval + days, data=activity_new, mean)
+
 library(lattice)
-avg_activity2 <- aggregate(steps ~ interval + day, data=activity_new, mean)
-xyplot(steps ~ interval | day, data=avg_activity2, type="l", layout = c(1, 2),
+xyplot(steps ~ interval | days, data=avg_daily_steps_by_days, type="l", layout = c(1, 2),
        xlab="Interval", ylab="Number of steps", main="Average number of steps taken per day")
 ```
+
